@@ -1,3 +1,11 @@
+2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gas/mips/jalr2.s, gas/mips/jalr2.d: New test.
+	* gas/mips/jal-svr4pic.d: Don't expect R_MIPS_JALRs to be reduced.
+	* gas/mips/jal-xgot.d: Likewise.
+	* gas/mips/mips-abi32-pic2.d: Likewise.
+	* gas/mips/mips.exp: Run it.
+
 2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>
 
 	* lib/gas-defs.exp (gas_test_error): Mark internal error/assertion
